refactor: 마지막으로 읽은 메세지 시간 형식 수정